# hnswlib_benchmark

./: .gitignore  CMakeLists.txt  Makefile  README.md  RUNBOOK.md  build.sh  build_times.txt  setup.sh
lib/: argparser.hpp  embeddings.hpp  stopwatch.hpp  utils.hpp
py/: plot.py  single_query_plot.py
src/: bench_st.cpp  bench_st_single_query.cpp  create_hnsw.cpp  main_alt.cpp
